stable, specific style for searching movie and recMovies

--- a/public/style.css
+++ b/public/style.css
@@ -17,7 +17,7 @@ body {
     background-color: #fff;
   }
   
-  .movie-container {
+  .rec-movie-container {
     display: grid;
     grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
     gap: 20px;
