--- a/views/home.ejs
+++ b/views/home.ejs
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="/style.css">
 </head>
 <body>
-    <header class="header" style="margin: 0;">
+    <header class="header" style="margin: 0; text-align: center; justify-content: center;">
         <h1>Same Dramas...</h1>
         <form action="/movie" method="post">
             <input name="moviename" type="text" placeholder="Search for movies" class="search-bar">
@@ -16,9 +16,28 @@
         <form action="/moremovies" method="post">
             <button class="btn" >more</button>
         </form>
+
+        <div class="movie-container" style="text-align: center;" >
+            <div class="card" style="width: 12rem; height: 18rem; background-color: aliceblue; box-shadow: 0px 4px 8px 0px rgba(0, 0, 0, 0.2); width: fit-content; border-radius: 5% 5% 0 0 ">
+                <img src=<%= newMovie.img %> class="card-img-top" alt="..." style="width: 12rem; height: 60%; border-radius: 5% 5% 2% 2%" >
+                <div class="card-body" style="padding: 0 1rem 0 1rem;" >
+                    <h3 class="card-title"> <%= newMovie.title %></h3>
+                </div>
+                <ul class="list-group list-group-flush">
+                    <li class="list-group-item">An item</li>
+                    <li class="list-group-item">A second item</li>
+                    <li class="list-group-item">A third item</li>
+                </ul>
+                <div class="card-body" style="padding: 0 1rem 0 1rem;">
+                    <a href="#" class="card-link">Card link</a>
+                    <a href="#" class="card-link">Another link</a>
+                </div>
+            </div>
+        </div>
     </header>
 
-    <main class="movie-container" style="display: flex; flex-wrap: wrap; justify-content: center;" >
+
+    <main class="rec-movie-container" style="display: flex; flex-wrap: wrap; justify-content: center;" >
         <% for(let movie of movies) { %>
             <div class="card" style="width: 19rem; height: 25rem; box-shadow: 0px 4px 8px 0px rgba(0, 0, 0, 0.2); width: fit-content; border-radius: 5% 5% 0 0 ">
                 <img src=<%= movie.img %> class="card-img-top" alt="..." style="width: 19rem; height: 50%; border-radius: 5% 5% 0 0" >
@@ -26,9 +45,8 @@
                     <h3 class="card-title"> <%= movie.title %></h3>
                 </div>
                 <ul class="list-group list-group-flush">
-                    <li class="list-group-item">An item</li>
+                    <li class="list-group-item">Director: <%= movie.director %></li>
                     <li class="list-group-item">A second item</li>
-                    <li class="list-group-item">A third item</li>
                 </ul>
                 <div class="card-body" style="padding: 0 1rem 0 1rem;">
                     <a href="#" class="card-link">Card link</a>
